# chunky

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  chunkgen.cpp  chunkview.cpp  chunkview.h  chunky.cpp  chunky.h
.github/workflows/: cmake.yml
runner/: runner.cpp  runner_utils.h  viewrunner.cpp
tests/: basic_test.cpp  view_test.cpp
