CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(chunky VERSION 0.1)

set(CHUNKY_LIBS stdc++ m)
set(CHUNKY_SRC external/libdicey/dice.cpp chunky.cpp chunky.h)
enable_testing()

ADD_EXECUTABLE(basic_test tests/basic_test.cpp ${CHUNKY_SRC})
TARGET_INCLUDE_DIRECTORIES(basic_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(basic_test ${CHUNKY_LIBS})
ADD_TEST(NAME basic_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/basic_test)

ADD_EXECUTABLE(chunkgen chunkgen.cpp ${CHUNKY_SRC})
TARGET_INCLUDE_DIRECTORIES(chunkgen PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(chunkgen ${CHUNKY_LIBS})
ADD_TEST(NAME chunkgen_test1 COMMAND ${CMAKE_CURRENT_BINARY_DIR}/chunkgen)

ADD_EXECUTABLE(view_test tests/view_test.cpp ${CHUNKY_SRC} chunkview.cpp chunkview.h)
TARGET_INCLUDE_DIRECTORIES(view_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(view_test ${CHUNKY_LIBS})
ADD_TEST(NAME view_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/view_test)

ADD_EXECUTABLE(runner runner/runner.cpp ${CHUNKY_SRC})
TARGET_INCLUDE_DIRECTORIES(runner PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(runner ncurses ${CHUNKY_LIBS})

ADD_EXECUTABLE(viewrunner runner/viewrunner.cpp ${CHUNKY_SRC} chunkview.cpp)
TARGET_INCLUDE_DIRECTORIES(viewrunner PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(viewrunner ncurses ${CHUNKY_LIBS})
